# DatabaseTesting

./: .gitignore  CMakeLists.txt  DatabaseTesting.slnx
DatabaseTesting/: DatabaseTesting.vcxproj  DatabaseTesting.vcxproj.filters
include/: DataBaseManager.h  StorageManager.h  Table.h
src/: main.cpp
